# CV-CREATOR

./: .env.example  .gitignore  CAMBIOS_FINALES.md  CAMBIOS_PROMPTS.md  CAMBIOS_SOLUCION_COMPLETA.md  ENTORNO_VIRTUAL.md  PRD.md  PRD_NAVIGATION.md  PRD_SKILL_MEMORY.md  README.md  SOLUCION_FINAL_CLASIFICACION.md  VALIDACION.md  admin_app.py  app.py  pyproject.toml  requirements.txt  requirements.txty
docs/: US-005-RESUMEN.md  US-008-RESUMEN.md  US-009-RESUMEN.md  US-011-RESUMEN.md  US-014-RESUMEN.md  US-015-RESUMEN.md  US-016-RESUMEN.md  US-017-RESUMEN.md  US-018-RESUMEN.md  US-019-RESUMEN.md  US-021-MEMORIA-HABILIDADES.md  US-022-UX-IMPROVEMENTS.md  US-023-ENTREVISTA-IA.md
src/: ai_backend.py  ai_proxy.py  auth.py  cv_parser.py  database.py  experience_rewriter.py  gap_analyzer.py  job_analyzer.py  logger.py  pdf_renderer.py  prompts.py  question_generator.py  token_tracker.py  yaml_generator.py  yaml_validator.py
supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_user_profiles.sql  004_token_tracking.sql
tasks/: prd-authentication.md  prd-supabase-migration.md  prd-token-tracking-admin.md
templates/: classic_template.yaml
tests/: test_admin.py  test_ai_backend.py  test_auth.py  test_cv_parser.py  test_database.py  test_experience_rewriter.py  test_gap_analyzer.py  test_job_analyzer.py  test_logger.py  test_pdf_renderer.py  test_prompts.py  test_question_generator.py  test_question_generator.py.backup  test_token_tracker.py  test_yaml_generator.py  test_yaml_validator.py
